# Brain_Tumor_Cassifier_

./: LICENSE  README.md  amplify.yaml  amplify.yml
MRI_classify/: Dockerfile  README.md  pyproject.toml  requirements.txt
MRI_classify/assets/: Screencast from 10-17-2024 12_59_57 PM.webm
MRI_classify/src/: class_mr.py
src/: __init__.py  api_endpoint.py
